<resources>
    <string name="app_name">devhackTodo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="register">Registrar</string>
    <string name="enter">Entrar</string>
    <string name="remenber_device">Recordar Mi usuario en este dispositivo</string>
    <string name="remenber_password">Olvide Mi contraseña</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
